Fix cut off carousel controls.
- Move carousel controls into the frame in fullscreen.

--- a/community/browser/app/styles/main.styl
+++ b/community/browser/app/styles/main.styl
@@ -170,6 +170,11 @@ table.json-object
   right: 0
   background-color: #fff
   z-index: 1030
+  .carousel-control
+    left: -20px
+    &.right
+      right: -15px
+      left: auto
   .code-bar
     background-color: #fff
     position: relative
